--- a/index.html
+++ b/index.html
@@ -3,57 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
-    <title>Ejercicio Evaluable</title>
+    <title>Ejercicio Sass</title>
+    <link rel="shortcut icon" href="./img/sass.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">    
 </head>
 <body>
-    <nav>
-        <ul class="navbar">
-            <li class="nav-item">
-                <img src="img/sass.png" alt="header-img">
-            </li>
-            <li class="nav-item">Página 1</li>
-            <li class="nav-item">Página 2</li>
-            <li class="nav-item">Página 3</li>
-
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <div>
+                <div id="icon"></div>
+                <p>SASS Example</p>
+            </div>
+            <div>
+                <ul id="nav-options">
+                    <li class="nav-link"><a href="#">Página1</a></li>
+                    <li class="nav-link"><a href="#">Página2</a></li>
+                    <li class="nav-link"><a href="#">Página3</a></li>
+                    <li class="nav-link"><a href="#"><i class="fas fa-search"></i></a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <main>
-
-        <div class="card">
-            <img src="img/volcan1.jpeg" alt="volcan1">
-            <h1 class="titulo">Volcan 1</h1>
-            <h3 class="fecha">17 de junio de 2015</h3>
-            <p class="descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum repudiandae error dicta reicien  dis illum, molestiae
-            autem fugiat alias tenetur odio molestias labore, beatae pariatur possimus perspiciatis quibusdam iste, natus non.</p>
+        <div id="card-container">
+            <div class="card">
+                <div class="card-image" id="image-1"></div>
+                <div class="card-content">
+                    <h2 class="card-title">Volcán 1</h2>
+                    <h3 class="card-info">17 de junio de 2015</h3>
+                    <p class="card-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ex delectus veniam expedita doloremque odit totam, dolor suscipit nemo soluta nisi reprehenderit. Nisi totam molestias recusandae explicabo soluta quasi ipsum!</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image" id="image-2"></div>
+                <div class="card-content">
+                    <h2 class="card-title">Volcán 2</h2>
+                    <h3 class="card-info">23 de marzo de 2003</h3>
+                    <p class="card-body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo reiciendis modi ab cupiditate, quibusdam blanditiis possimus. Eligendi maxime molestias dolor alias veritatis quas, porro ipsum sit sapiente fugit inventore officiis?</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image" id="image-3"></div>
+                <div class="card-content">
+                    <h2 class="card-title">Volcán 3</h2>
+                    <h3 class="card-info">6 de noviembre de 1992</h3>
+                    <p class="card-body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam minima ullam labore fuga, reiciendis aperiam rerum recusandae aspernatur corporis, error sunt. Voluptatem delectus et, ut doloremque repudiandae perspiciatis cum ab!</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image" id="image-4"></div>
+                <div class="card-content">
+                    <h2 class="card-title">Volcán 4</h2>
+                    <h3 class="card-info">1 de mayo de 2020</h3>
+                    <p class="card-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. At vel qui sint harum ab architecto inventore mollitia nam sed animi, veniam iure quibusdam quis nostrum ducimus quod modi provident! Facilis?</p>
+                </div>
+            </div>
         </div>
-
-        <div class="card">
-            <img src="img/volcan2.jpeg" alt="volcan2">
-            <h1 class="titulo">Volcan 2</h1>
-            <h3 class="fecha">23 de mayo de 2003</h3>
-            <p class="descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum repudiandae error dicta reicien  dis illum, molestiae
-            autem fugiat alias tenetur odio molestias labore, beatae pariatur possimus perspiciatis quibusdam iste, natus non.</p>
-        </div>
-
-        <div class="card">
-            <img src="img/volcan3.jpeg" alt="volcan3">
-            <h1 class="titulo">Volcan 3</h1>
-            <h3 class="fecha">6 de noviembre de 1992</h3>
-            <p class="descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum repudiandae error dicta reicien  dis illum, molestiae
-            autem fugiat alias tenetur odio molestias labore, beatae pariatur possimus perspiciatis quibusdam iste, natus non.</p>
-        </div>
-
-        <div class="card">
-            <img src="img/volcan4.jpeg" alt="volcan3">
-            <h1 class="titulo">Volcan 4</h1>
-            <h3 class="fecha">1 de mayo de 2020</h3>
-            <p class="descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum repudiandae error dicta reicien  dis illum, molestiae
-            autem fugiat alias tenetur odio molestias labore, beatae pariatur possimus perspiciatis quibusdam iste, natus non.</p>
-        </div>
-
-
-
     </main>
 </body>
 </html>
